--- a/flaskr/templates/post/post-list.html
+++ b/flaskr/templates/post/post-list.html
@@ -5,9 +5,28 @@
 {% endblock %}
 
 {% block content %}
-    <ul>
-        <li>Post 1</li>
-        <li>Post 2</li>
-        <li>Post 3</li>
-    </ul>
+<!doctype html>
+<html>
+   <body>
+   
+      <table border = 1>
+         <thead>
+            <td>Username</td>
+            <td>Email</td>
+            <td>Post</td>
+         </thead>
+         
+         {% for row in rows %}
+            <tr>
+               <td>{{row["name"]}}</td>
+               <td>{{row["email"]}}</td>
+               <td> {{ row["Post"]}}</td>
+            </tr>
+         {% endfor %}
+      </table>
+      
+      <a href = "/">Go back to home page</a>
+      
+   </body>
+</html>
 {% endblock %}
