--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -13,7 +13,7 @@
       <a class="nav-link active" href="/">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/post">Posts</a>
+      <a class="nav-link" href="/post/">Posts</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/about">About</a>
@@ -21,11 +21,15 @@
     <li class="nav-item">
       <a class="nav-link" href="/auth/login">login</a>
     </li>
+    
+    <!-- <li class="nav-item align-right">
+      <a class="nav-link" href="/auth/logout">logout</a>
+    </li> -->
   </ul>
 </nav>
 <section class="content">
   <div class="container-fluid">
-    {% block header %}{% endblock %}
+   
     {% for message in get_flashed_messages() %}
     <div class="row">
       <div class="col">{{ message }}</div>
