--- a/flaskr/templates/about.html
+++ b/flaskr/templates/about.html
@@ -3,18 +3,24 @@
 {% block header %}
 <div class="row">
   <div class="col">
-    <h1>{% block title %}About{% endblock %}</h1>
+    <h1>{% block title %}About Us{% endblock %}</h1>
   </div>
 </div>
 {% endblock %}
 
 {% block content %}
-<div class="row">
-  <div class="col">
-    <p> This is the About page col 1. </p>
+<div class="row justify-content-center m-3">
+ <div class="col-md-12 m-3">
+   <h1>About us</h1>
+ </div>
+  <div class="col-md-12 text-center mp-3">
+    <h5> We are Just programmers trying to learn how flask works using a blog,
+      Well based on the tutorial </h5>
   </div>
-  <div class="col">
-    <p> This is the About page col 2. </p>
+  <div class="col-md-11">
+    <p>
+      "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+    </p>
   </div>
 </div>
 {% endblock %}
