--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -3,18 +3,31 @@
 {% block header %}
 <div class="row">
   <div class="col">
-    <h1>{% block title %}Home{% endblock %}</h1>
+    <h1>{% block title %} Blog {% endblock %}</h1>
   </div>
 </div>
 {% endblock %}
 
 {% block content %}
-<div class="row">
-  <div class="col">
-    <p> This is the Home page col 1. </p>
+
+<div class="row justify-content-center m-3">
+  <div class="col-12 text-center m-4">
+    <h2>Publish your passions, your way 
+       <br />Create a unique and beautiful blog.</h2>
+    <h3>It’s easy and free</h3>
   </div>
-  <div class="col">
+
+  <div class="col-md">
+    <p> This is the Home page col 1. </p>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+  </div>
+  <div class="col-md">
     <p> This is the Home page col 2. </p>
+    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+  </div>
+  <div class="col-12 text-center">
+    <p>Please Click The Button to view Posts</p>
+    <a href="{{ url_for('post.list') }}"><button type="button" class="btn btn-primary">Post</button></a>
   </div>
 </div>
 {% endblock %}
