--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -6,30 +6,41 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Blog</a>
-  <ul class="nav">
+<nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
+  <ul class="navbar-nav">
+    <li>
+      <a class="navbar-brand" href="/">Blog</a>
+    </li>
     <li class="nav-item">
       <a class="nav-link active" href="/">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/post/">Posts</a>
+      <a class="nav-link" href="{{ url_for('post.list') }}">Post</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/about">About</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/auth/login">login</a>
+  </ul>
+  <ul class="navbar-nav">
+    {% if g.user %}
+    <li class="nav-inline float-right">
+      <a class="nav-link" href="{{ url_for('profile.view',  id=g.user['id']) }}">Profile</a>
     </li>
-    
-    <!-- <li class="nav-item align-right">
-      <a class="nav-link" href="/auth/logout">logout</a>
-    </li> -->
+    <li class="nav-inline float-right">
+      <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
+    </li>
+   
+    {% else %}
+    <li class="nav-item">
+      <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
+    </li>
+    {% endif %}
+
   </ul>
 </nav>
 <section class="content">
   <div class="container-fluid">
-   
+
     {% for message in get_flashed_messages() %}
     <div class="row">
       <div class="col">{{ message }}</div>
