--- a/flaskr/templates/post/post-create.html
+++ b/flaskr/templates/post/post-create.html
@@ -1,21 +1,22 @@
 {% extends 'layout.html' %}
 
 {% block header %}
-  <h1>{% block title %}New Post{% endblock %}</h1>
+<h1>{% block title %}New Post{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
-  <form>
-    <div class="form-group">
-      <label for="title">Title</label>
-      <input name="title" type="text" class="form-control" id="title" placeholder="Title" value="{{ request.form['title'] }}" required>
-    </div>
-    <div class="form-group">
-      <label for="body">Example textarea</label>
-      <textarea name="body" class="form-control" id="body" rows="3">{{ request.form['body'] }}</textarea>
-    </div>
-    <div>
-      <button type="submit" value="save" class="btn btn-primary">Post</button>
-    </div>
-  </form>
+<form action="{{ url_for('post.create') }}" method="POST">
+  <div class="form-group">
+    <label for="title">Title</label>
+    <input name="title" type="text" class="form-control" id="title" placeholder="Title"
+      value="{{ request.form['title'] }}" required>
+  </div>
+  <div class="form-group">
+    <label for="body">Body</label>
+    <textarea name="body" class="form-control" id="body" rows="3">{{ request.form['body'] }}</textarea>
+  </div>
+  <div>
+    <button type="submit" value="save" class="btn btn-primary">Post</button>
+  </div>
+</form>
 {% endblock %}
