--- a/flaskr/templates/post/post-update.html
+++ b/flaskr/templates/post/post-update.html
@@ -1,28 +1,35 @@
 {% extends 'layout.html' %}
 
 {% block header %}
-<h1>{% block title %}Edit "{{ post['title'] }}"{% endblock %}</h1>
+<h1>{% block title %}Edit Post "{{ post['title'] }}"{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
 <div class="row">
     <div class="col-md-12 mp-5">
-        <form method="post">
-            <div class="form-group">
-                <label for="title">Title</label>
-                <input class="form-control" name="title" id="title" value="{{ request.form['title'] or post['title'] }}" required>
-            </div>
-            <div class="form-group">
-                <label for="body">Body</label>
-                <textarea name="body" id="body">{{ request.form['body'] or post['body'] }}</textarea>
-                <input class="form-control" type="submit" value="Save">
-            </div>
-        </form>
+        <div class="col-12">
+            <form method="post">
+                <div class="form-group m-3">
+                    <label for="title">Title</label>
+                    <input class="form-control" name="title" id="title"
+                        value="{{ request.form['title'] or post['title'] }}" required>
+                </div>
+                <div class="form-group m-3">
+                    <label for="body">Body</label>
+                    <textarea class="form-control" name="body" id="body"
+                        rows="4">{{ request.form['body'] or post['body'] }}</textarea>
+                </div>
+                <div class="text-center m-3">
+                    <input class="btn btn-primary" type="submit" value="Save">
+                </div>
+            </form>
+        </div>
         <hr>
-        <form action="{{ url_for('blog.delete', id=post['id']) }}" method="post">
-            <input class="danger" type="submit" value="Delete" onclick="return confirm('Are you sure?');">
-        </form>
+        <div class="col-12 m-3">
+            <form action="{{ url_for('post.delete', id=post['id']) }}" method="post">
+                <input class="danger" type="submit" value="Delete" onclick="return confirm('Are you sure?');">
+            </form>
+        </div>
     </div>
 </div>
-
 {% endblock %}
