--- a/flaskr/templates/post/post-view.html
+++ b/flaskr/templates/post/post-view.html
@@ -11,7 +11,8 @@
 {% block content %}
 <div class="row">
   <div class="col">
-    <p>{{post.content}}</p>
+    <h3>{{post.title}}</h3>
+    <p>{{post.body}}</p>
   </div>
 </div>
 {% endblock %}
