--- a/flaskr/templates/profile/profile-update.html
+++ b/flaskr/templates/profile/profile-update.html
@@ -1,20 +1,41 @@
 {% extends 'layout.html' %}
 
 {% block header %}
-<div class="row">
-  <div class="col">
-    <h1>{% block title %}Profile update{% endblock %}</h1>
-  </div>
-</div>
+<h1>{% block title %}Edit Profile {% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
 <div class="row">
-  <div class="col">
-    <p> This is the About page col 1. </p>
-  </div>
-  <div class="col">
-    <p> This is the About page col 2. </p>
+  <div class="col-md-12 mp-5">
+    <div class="col-12">
+      <form method="post">
+        <div class="form-group m-3">
+          <label for="firstname">First Name</label>
+          <input class="form-control" name="firstname" id="firstname" value="{{ user.firstname }}" required>
+        </div>
+        <div class="form-group m-3">
+          <label for="lastname">Last Name</label>
+          <input class="form-control" name="lastname" id="lastname" value="{{ user.lastname }}" required>
+        </div>
+        <div class="form-group m-3">
+          <label for="username">Username</label>
+          <input class="form-control" name="username" id="username" value="{{ user.username }}" required>
+        </div>
+        <div class="form-group m-3">
+          <label for="email">Email</label>
+          <input class="form-control" name="email" id="email" value="{{ user.email }}" required>
+        </div>
+        <div class="text-center m-3">
+          <input class="btn btn-primary" type="submit" value="Save">
+        </div>
+      </form>
+    </div>
+    <hr>
+    <div class="col-12 m-3">
+      <form action="{{ url_for('profile.delete', id=g.user['id']) }}" method="post">
+        <input class="danger" type="submit" value="Delete" onclick="return confirm('Are you sure?');">
+      </form>
+    </div>
   </div>
 </div>
 {% endblock %}
